--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,7 @@ CLERK_PUBLISHABLE_KEY=your_publishable_key_here
 CLERK_SECRET_KEY=your_secret_key_here
 
 # Database (Neon / Postgres)
-DB_HOST=your_db_host
-DB_PORT=5432
-DB_USERNAME=your_db_user
-DB_PASSWORD=your_db_password
-DB_NAME=your_db_name
+DATABASE_URL='postgresql://neondb_owner:dslkfjs@ep-late-resonance-ahdltydihu-pooler.c-31.us-esast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 
 # Telnyx (or other telephony service)
 TELNYX_API_KEY=your_telnyx_api_key
